# rmake-playground

./: Cargo.toml
rmake-support/: lib.rs  rustc.rs
run-make-v2/CURRENT_RUSTC_VERSION/: __rmake.rs  libstable.rmeta
src/: main.rs
